fixed info mobile modal overflow issue

--- a/app/auth/properties/[property_id]/info/_Components/DBColumn/Components/EditForm/style.module.scss
+++ b/app/auth/properties/[property_id]/info/_Components/DBColumn/Components/EditForm/style.module.scss
@@ -40,8 +40,19 @@
             appearance: textfield;
         }
 
+        select{
+            flex: 1;
+            
+        }
+
         select option{
             background: white;
         }
+    }
+}
+
+@media screen and (max-width: 1000px){
+    .editForm{
+        background: #0006;
     }
 }
