--- a/components/Gradient/style.module.scss
+++ b/components/Gradient/style.module.scss
@@ -1,7 +1,8 @@
-.container{
+.gradientContainer{
     width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
     left: 0;
+    background: linear-gradient(#000, #0001);
 }
