--- a/scss/_Form.scss
+++ b/scss/_Form.scss
@@ -104,7 +104,7 @@ form .form-button-group{
     }
 
     input, select, textarea{
-        font-size: 1.25rem;
+        font-size: 1rem;
         background: none;
         border-radius: 5px;
         background: white;
